deleted fixed image sizes and alignes

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -9,12 +9,6 @@
   flex-direction: column;
 }
 
-.product-card__image {
-  width: 160px;
-  height: 134px;
-  align-self: center;
-}
-
 .image-container {
   margin: 16px 3px 0;
 }
